--- a/CloudGen/src/main/resources/static/student_enquiry_form.html
+++ b/CloudGen/src/main/resources/static/student_enquiry_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="student_enquiry_form.css" type="text/css">
 <title>Insert title here</title>
 </head>
 <body>
