--- a/CloudGen/src/main/resources/static/html/home.html
+++ b/CloudGen/src/main/resources/static/html/home.html
@@ -18,7 +18,7 @@
                     <li><a href="https://www.hotstar.com/in">ABOUT</a></li>
                     <li><a href="https://www.primevideo.com/storefront/home/ref=atv_nb_sf_hm">COURSES</a></li>
                     <li><a href="#">NOTES</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="../html/student_enquiry_form.html">CONTACT</a></li>
                 </ul>
             </div>
 
