--- a/CloudGen/src/main/resources/static/html/student_enquiry_form.html
+++ b/CloudGen/src/main/resources/static/html/student_enquiry_form.html
@@ -2,110 +2,110 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<link rel="stylesheet" href="student_enquiry_form.css" type="text/css">
+<link rel="stylesheet" href="../css/student_enquiry_form.css" type="text/css">
 <title>Insert title here</title>
 </head>
 <body>
 <div class="form_container">
-	<div class="heading"><label >Student Course Enquiry Form</label></div>
+	<div class="heading"><label>STUDENT COURSE ENQUIRY FORM</label></div>
 	<div class="sub_form">
-		<div class="doe space">
-			<label class="elements">Date of Enquiry</label><br>
+		<div class="doe ">
+			
 			<input class="fields" type="date" placeholder="Date of Enquiry">
 		</div>	
 		
-		<div class="doj space">
-			<label class="elements">Date of Join</label><br>
+		<div class="doj ">
+			
 			<input  class="fields" type="date" placeholder="Date of Join">
 		</div>	
 		
-		<div class="bt space">
-			<label class="elements">Batch Time</label><br>
+		<div class="bt ">
+			
 			<input class="fields" type="date" placeholder="Batch Time">
 		</div>	
 		
-		<div class="name space">
-			<label class="elements">Name</label><br>
+		<div class="name ">
+			
 			<input class="fields" type="text" placeholder="Name">
 		</div>	
 		
-		<div class="address space">
-			<label class="elements">Address</label><br>
+		<div class="address ">
+			
 			<input class="fields" type="text" placeholder="Address">
 		</div>	
 		
-		<div class="pmn space">
-			<label class="elements">Primary Mobile Number</label><br>
+		<div class="pmn ">
+			
 			<input class="fields" type="text" placeholder="Primary Mobile number">
 		</div>	
 		
-		<div class="smn space">
-			<label class="elements">Secondary Mobile Number</label><br>
+		<div class="smn ">
+			
 			<input class="fields" type="text" placeholder="Secondary Mobile Number">
 		</div>	
 		
-		<div class="emailid space">
-			<label class="elements">Email id</label><br>
+		<div class="emailid ">
+			
 			<input class="fields" type="text"placeholder="Email ID">
 		</div>	
 		
 		<div class="cn">
-			<label class="elements space">Course Name Intrested to Join</label><br>
+			
 			<input class="fields" type="text" placeholder="Course Name Intrested to Join">
 		</div>	
 		
 		<div class="qulify">
-			<label class="elements space">Qualification</label><br>
+			
 			<input class="fields" type="text" placeholder="Qualification">
 		</div>	
 		
 		<div class="yop">
-			<label class="elements space">Year of Passings</label><br>
+			
 			<input class="fields" type="date" placeholder=Date ofEnquiry>
 		</div>	
 		
 		<div class="nou">
-			<label class="elements space">Name of the University</label><br>
+			
 			<input class="fields" type="text" placeholder="Name of the College">
 		</div>	
 		
 		<div class="ss">
-			<label class="elements space">Subject Specialization</label><br>
+			
 			<input class="fields" type="text" placeholder="Subject Specialization in">
 		</div>	
 		
-		<div class="sk space">
-			<label class="elements">Previous System/Subject Knowledge in Software/Hardware/IT</label><br>
+		<div class="sk">
+			
 			<input class="fields" type="text" placeholder="Previous System/Subject Knowledge in Software/Hardware/IT">
 		</div>	
 		
 		<div class="nc">
-			<label class="elements space">Name of the Course</label><br>
+			
 			<input class="fields"  type="text" placeholder="Name of the Course">
 		</div>	
 		
 		<div class="hi">
-			<label class="elements space">How did you know about this Institute?</label><br>
+			
 			<input class="fields" type="text" placeholder="How did you know about this Institute?">
 		</div>	
 		
 		<div class="ip">
-			<label class="elements space">If by Friends: Name of the Person</label><br>
+			
 			<input class="fields" type="text" placeholder="If by Friends: Name of the Person">
 		</div>	
 		
 		<div class="mp">
-			<label class="elements space">Mobile Number of the Person</label><br>
+			
 			<input class="fields" type="text" placeholder="Mobile Number of the Person">
 		</div>	
 		
 		<div class="sm">
-			<label class="elements space">On line: Name of the Social Media</label><br>
+			
 			<input class="fields" type="text" placeholder="On line: Name of the Social Media">
 		</div>	
 		
 		<div class="iw">
-			<label class="elements space">If any other please write:</label><br>
+			
 			<input class="fields" type="text" placeholder="If any other please write:">
 		</div>	
 		
